--- a/main/res/layout/activity_habit_rec.xml
+++ b/main/res/layout/activity_habit_rec.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".habitRec">
+    tools:context=".activities.HabitActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler1"
@@ -12,5 +12,20 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:padding="4dp" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        app:itemIconTint="@drawable/calendar_selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:menu="@menu/menu_navigation" />
 
 </RelativeLayout>
